--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -124,7 +124,7 @@
          	<div class="box-header h4 text-light-blue">
           	<div class="pull-left "><strong>门店毛利</strong></div>
          	<div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-         	<div class="pull-left text-red" style="font-size:75%">1.本月数据截止到昨天24点。</br>2.营销费用包含使用的优惠券和粮票。</div>
+         	<div class="pull-left text-red" style="font-size:75%">1.本月数据截止到昨天24点。</br>2.营销费用包含使用的优惠券和粮票。</br>3.毛利=销售收入-营销费用-报损-盘亏。</div>
           </div>
           <div class="box-body">
             <form id="searchform">
@@ -172,7 +172,9 @@
 	                      <th width="10%">门店编号</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
-                          <th width="12%">营销费用<br/></th>
+                          <th width="10%">营销费用<br/></th>
+                          <th width="10%">报损<br/></th>
+                          <th width="10%">盘亏<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">销售收入-营销费用-报损-盘亏</font>毛利</th>
 	                    </tr>
@@ -233,7 +235,7 @@
 		type:"month",
 		btns: ['confirm','now'],
 		theme: '#11214e',
-		min: '2018-8-30',
+		min: '2018-9-1',
 		max:year_month
 		
 	});
@@ -491,7 +493,9 @@
 		                       +"<td>"+jData[i].platform_profit+"</td>"
                                +"<td>"+jData[i].ims_profit+"</td>"
                                +"<td>"+jData[i].order_fee+"</td>"
-                               +"<td>"+jData[i].total_profit+"</td>"
+                               +"<td>"+jData[i].baosun+"</td>"
+                               +"<td>"+jData[i].pankui+"</td>"
+                               +"<td>"+(jData[i].total_profit-jData[i].order_fee-jData[i].baosun-jData[i].pankui).toFixed(2)+"</td>"
 		                       +"</tr>";
 		                       
 		                  $("#tradeType_tbody").append(infoStr);     
