--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -84,7 +84,7 @@
                                 <img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
                             </em>
 
-                            <div class="TDsec-nav" style="display: block">
+                            <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="pull-left">
                                         <dt style="text-align:center"><i></i>档案数据</dt>
@@ -127,7 +127,7 @@
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                     </dl>
                                     <dl class="pull-left">
-                                        <dt ><i></i>运营数据</dt>
+                                        <dt><i></i>运营数据</dt>
                                         <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
                                         <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
                                         <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
@@ -146,12 +146,12 @@
                                         <dd><a href="javascript:searchRank(6)"><span class="fa fa-object-ungroup"></span>事业群排名</a></dd>
                                         <dd><a href="javascript:searchRank(7)"><span class="fa fa-gears"></span>频道排名</a></dd>
                                     </dl>
-                                    <dl class="pull-left">
-                                        <dt style="text-align:center"><i></i>结算数据</dt>
+<!--                                    <dl class="pull-left">
+                                        <dt><i></i>结算数据</dt>
                                         <dd style="position:relative;" id="report_syq"><a href="javascript:goToFileDownload()"><span class="fa fa-bar-chart"></span>事业群结算数据</a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        <!--<dd><a href="javascript:;"><span class="fa fa-home"></span>运营结算数据</a></dd>-->
-                                    </dl>
+                                        &lt;!&ndash;<dd><a href="javascript:;"><span class="fa fa-home"></span>运营结算数据</a></dd>&ndash;&gt;
+                                    </dl>-->
                                 </div>
                             </div>
                         </li>
