--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -146,12 +146,12 @@
                                         <dd><a href="javascript:searchRank(6)"><span class="fa fa-object-ungroup"></span>事业群排名</a></dd>
                                         <dd><a href="javascript:searchRank(7)"><span class="fa fa-gears"></span>频道排名</a></dd>
                                     </dl>
-<!--                                    <dl class="pull-left">
+                                    <dl class="pull-left" style="display: none" ID="jssj">
                                         <dt><i></i>结算数据</dt>
-                                        <dd style="position:relative;" id="report_syq"><a href="javascript:goToFileDownload()"><span class="fa fa-bar-chart"></span>事业群结算数据</a>
+                                        <dd style="position:relative;" id="report_syq"><a href="javascript:goToFileDownload()"><span class="fa fa-bar-chart"></span>结算数据</a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        &lt;!&ndash;<dd><a href="javascript:;"><span class="fa fa-home"></span>运营结算数据</a></dd>&ndash;&gt;
-                                    </dl>-->
+                                        <!--<dd><a href="javascript:;"><span class="fa fa-home"></span>运营结算数据</a></dd>-->
+                                    </dl>
                                 </div>
                             </div>
                         </li>
