--- a/WebContent/crm/dynamicData_cityprofit_analysis.html
+++ b/WebContent/crm/dynamicData_cityprofit_analysis.html
@@ -161,11 +161,11 @@
                     <tbody id="tradeType_tbody">
 	                    <tr>
 	                      <th width="8%">城市</th>
-	                      <th width="10%">销售收入<br/>（非优易）</th>
+	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
                           <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                              <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">总销售收入</font>毛利</th>
+                              <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">销售收入-营销费用</font>毛利</th>
 	                    </tr>
                     </tbody>
                   </table>
@@ -417,12 +417,13 @@
 	        	   
 	        	   var infoStr="";
 	        	   for(var i=0;i<jData.length;i++){
+	        	       var real_profit = (jData[i].total_profit - jData[i].order_fee).toFixed(2);
 	        		   infoStr= "<tr>"
 		                       +"<td>"+jData[i].city_name+"</td>"
 		                       +"<td>"+jData[i].platform_profit+"</td>"
                                +"<td>"+jData[i].ims_profit+"</td>"
                                +"<td>"+jData[i].order_fee+"</td>"
-                               +"<td>"+jData[i].total_profit+"</td>"
+                               +"<td>"+real_profit+"</td>"
 		                       +"</tr>";
 		                       
 		                  $("#tradeType_tbody").append(infoStr);     
