--- a/WebContent/data_access/observe_dist_city_edit.html
+++ b/WebContent/data_access/observe_dist_city_edit.html
@@ -228,7 +228,7 @@ Date.prototype.format=function(fmt) {
 
 	
 	function doBack(){
-		window.location.href = 'dist_city_list.html';
+		window.location.href = 'observe_dist_city_list.html';
 	}
 	
 </script>
@@ -250,7 +250,7 @@ Date.prototype.format=function(fmt) {
 				<td>
 					<p></p>
 					<p>
-						<font color="red">*</font>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：<input type="text" id="username" isautotab="true" value="" style="width: 48%;" readonly="readonly"/>
+						<font color="red">*</font>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：<input type="text" id="username"  isautotab="true" value="" style="width: 48%;" readonly="readonly"/>
 					</p>
 				</td>
 				
