--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -86,7 +86,7 @@
 
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
-                                    <dl class="pull-left">
+                                    <dl class="pull-left" id="left-showa1">
                                         <dt style="text-align:center"><i></i>档案数据</dt>
                                         <!--<dd class="col-sm-6"><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>-->
                                         <dd class="col-sm-6 logo-prohibit"><a href="javascript:js_alert_temporary()"><span class="fa fa-file-o"></span>订单档案</a></dd>
@@ -104,7 +104,7 @@
 
 
                                     </dl>
-                                    <dl class="pull-left">
+                                    <dl class="pull-left" id="left-showa2">
                                         <dt style="text-align:center"><i></i>绩效数据</dt>
                                         <dd class="col-sm-6"><a href="javascript:goToStoretrade()"><span class="fa fa-line-chart"></span>门店GMV</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:goToNewaddcus()"><span class="fa fa-area-chart"></span>门店用户</a></dd>
@@ -126,7 +126,7 @@
                                         <!--<dd class="col-sm-4" style="position:relative"><a href="javascript:goToCityprofit();"><span class="fa fa-rmb"></span>城市毛利</a>-->
                                             <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
                                     </dl>
-                                    <dl class="pull-left">
+                                    <dl class="pull-left" id="left-showa3">
                                         <dt><i></i>运营数据</dt>
                                         <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
                                         <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
@@ -137,7 +137,7 @@
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
                                     </dl>
-                                    <dl class="pull-left">
+                                    <dl class="pull-left" id="left-showa4">
                                         <dt><i></i>排名数据</dt>
                                         <dd><a href="javascript:searchRank(1)"><span class="fa fa-signal"></span>城市排名</a></dd>
                                         <dd><a href="javascript:searchRank(2)"><span class="fa fa-home"></span>门店排名</a></dd>
